--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/BurlingtonCodeAcademy/geo-vermonter#readme",
   "devDependencies": {
     "cypress": "^3.0.2"
+  },
+  "dependencies": {
+    "bad-words": "^1.6.1"
   }
 }
